# Ranger

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
cmake/: FindMosek.cmake
data/: CMakeLists.txt  in.xywh
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/ext/: CMakeLists.txt
src/ext/MeanShift_cpp/: CMakeLists.txt  MeanShift.cpp
src/ext/fusion_cxx/: BaseModel.cc  CMakeLists.txt  IntMap.cc  SolverInfo.cc  SolverInfo.h  fusion.cc  fusion_p.h  mosektask.cc  mosektask_p.h
