CMAKE_MINIMUM_REQUIRED(VERSION 3.8)

project(Ranger)

set(H2O_DATA_DIR "${CMAKE_CURRENT_LIST_DIR}/data/")
add_definitions(-DH2O_DATA_DIR="${H2O_DATA_DIR}")

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)
set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${CMAKE_CURRENT_SOURCE_DIR}/cmake")

if(MSVC)
  add_definitions(-DNOMINMAX)
endif(MSVC)

find_package(Mosek REQUIRED)

add_subdirectory(src)
add_subdirectory(data)